# gpt.cpp

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  extract_weights.py  requirements.txt  run.py
cpp/include/: gpt.hpp
cpp/src/: bindings.cpp  gpt.cpp
